# runtimed

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  ROADMAP.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
cli/: Cargo.toml
cli/src/: main.rs
crates/graphql-kernel/: Cargo.toml  README.md
crates/graphql-kernel/src/: main.rs
crates/jupyter-kernel-test/: Cargo.toml
crates/jupyter-kernel-test/src/: harness.rs  lib.rs  main.rs  report.rs  snippets.rs  tests.rs  types.rs
crates/jupyter-protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/jupyter-protocol/src/: connection_info.rs  error.rs  execution_count.rs  kernelspec.rs  lib.rs  messaging.rs  time.rs
crates/jupyter-protocol/src/media/: datatable.rs  mod.rs
crates/jupyter-serde/: Cargo.toml  README.md
crates/jupyter-serde/src/: lib.rs  messaging.rs
crates/jupyter-serde/src/media/: datatable.rs  mod.rs
crates/jupyter-websocket-client/: Cargo.toml  README.md
crates/jupyter-websocket-client/examples/: execute.rs  tokio-websocket.md
crates/jupyter-websocket-client/src/: binary_protocol.rs  client.rs  lib.rs  main.rs  websocket.rs
crates/jupyter-ysync/: Cargo.toml  README.md
crates/jupyter-ysync/examples/: add_cell.rs  collaborative_execute.rs  edit_cell.rs  list_cells.rs  nb.rs  quick_edit.rs
crates/jupyter-ysync/src/: client.rs  convert.rs  doc.rs  executor.rs  lib.rs  output_mapping.rs  session.rs
crates/jupyter-ysync/src/protocol/: awareness.rs  message.rs  sync.rs
crates/jupyter-ysync/tests/: integration_test.rs
crates/jupyter-zmq-client/: CHANGELOG.md  Cargo.toml  README.md
crates/jupyter-zmq-client/examples/: tokio-launch-kernel.rs
crates/jupyter-zmq-client/src/: connection.rs  lib.rs  test_kernel.rs
crates/jupyter-zmq-client/tests/: tokio_mutex_lint.rs
crates/jupyter-zmq-client/tests/kernels/ir/: kernel.json
crates/jupyter-zmq-client/tests/kernels/python3/: kernel.json
crates/nbformat/: CHANGELOG.md  Cargo.toml  README.md  release.toml
crates/nbformat/examples/: upgrade_notebook.rs
crates/nbformat/src/: legacy.rs  lib.rs  v3.rs  v4.rs
crates/nbformat/tests/: conformance.rs  regenerate_expected.py
crates/nbformat/tests/notebooks/: Mediatypes.ipynb  News_Categorization_MNB 10-oct-2017.ipynb  test4.5.ipynb  test4.ipynb  test4docinfo.ipynb  test4jupyter_metadata.ipynb
crates/nbformat/tests/notebooks/expected/: README.md  pandas_basic.ipynb  test4.5_no_cell_id.ipynb
crates/ollama-kernel/: Cargo.toml  README.md
crates/ollama-kernel/src/: main.rs  ollama_client.rs  structured_calling.rs
crates/runt/: Cargo.toml
crates/runt/src/: kernel_client.rs  main.rs
crates/runt/tests/: cli.hone  exec_errors.hone  interrupt_errors.hone  kernel_lifecycle.hone  ps.hone  start_errors.hone  stop_errors.hone
crates/runt/tests-windows/: cli.hone  exec_errors.hone  interrupt_errors.hone  kernel_lifecycle.hone  ps.hone  start_errors.hone  stop_errors.hone
crates/runtimelib/: CHANGELOG.md  Cargo.toml  README.md
crates/runtimelib/examples/: tokio-launch-kernel.rs
crates/runtimelib/src/: connection.rs  dirs.rs  error.rs  kernelspec.rs  lib.rs  messaging.rs  test_kernel.rs
crates/runtimelib/src/jupyter/: client.rs  dirs.rs  discovery.rs  kernelspec.rs  mod.rs
crates/runtimelib/src/media/: mod.rs
crates/runtimelib/src/messaging/: content.rs  mod.rs  native.rs
crates/runtimelib/tests/: tokio_mutex_lint.rs
crates/sidecar/: Cargo.toml  ElementsFeedback.md  HANDOFF.md  README.md  build.rs  deno.json
crates/sidecar/src/: lib.rs  main.rs
crates/sidecar/src/static/: index.html  main.js  types.ts
crates/sidecar/ui/: components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/sidecar/ui/src/: App.tsx  types.ts
crates/sidecar/ui/src/components/: CellControls.tsx  CellTypeButton.tsx  CellTypeSelector.tsx  CollaboratorAvatars.tsx  OutputArea.tsx  PresenceBookmarks.tsx  README.md  accordion-widget.tsx  ansi-output.tsx  box-widget.tsx  button-widget.tsx  checkbox-widget.tsx  color-picker.tsx  dropdown-widget.tsx  float-progress.tsx  float-range-slider.tsx  float-slider.tsx  gridbox-widget.tsx  hbox-widget.tsx  html-widget.tsx  int-progress.tsx  int-range-slider.tsx  int-slider.tsx  json-output.tsx  markdown-output.tsx  media-router.tsx  radio-buttons-widget.tsx  select-multiple-widget.tsx  tab-widget.tsx  text-widget.tsx  textarea-widget.tsx  toggle-button-widget.tsx  toggle-buttons-widget.tsx  vbox-widget.tsx  widget-debugger.tsx
crates/sidecar/ui/src/lib/: buffer-utils.ts  index.ts  (+5 more)
jupyter-web/: Cargo.toml
jupyter-web/src/: main.rs  websocket.rs
python/runtimed/: pyproject.toml
python/runtimed/src/runtimed/: __init__.py  _binary.py  _ipython_bridge.py  _sidecar.py
python/runtimed/tests/: test_binary.py  test_ipython_bridge.py  test_sidecar.py
runtimed/: Cargo.toml  README.md
runtimed/src/: child_runtime.rs  db.rs  execution.rs  instance.rs  main.rs  routes.rs  runtime_manager.rs  startup.rs  state.rs
runtimelib/: Cargo.toml  README.md
runtimelib/src/: environment.rs  jupyter_dirs.rs  jupyter_runtime.rs  lib.rs  media.rs
runtimelib/src/jupyter/: actions.rs  client.rs  connection_file.rs  constants.rs  dirs.rs  discovery.rs  header.rs  kernelspec.rs  message.rs  message_content.rs  messaging.rs  messaging_old.rs  metadata.rs  mod.rs  notebook.rs  request.rs  response.rs  schema_tools.rs  wire_protocol.rs
runtimelib/src/jupyter/content/: iopub.rs  mod.rs  shell.rs
runtimelib/src/jupyter/handlers/: debug.rs  mod.rs  msg_count.rs  outputs.rs
runtimelib/src/jupyter/iopub_content/: clear_output.rs  display_data.rs  errors.rs  execute_input.rs  execute_result.rs  mod.rs  status.rs  stream.rs
runtimelib/src/jupyter/shell_content/: execute.rs  kernel_info.rs  mod.rs
runtimelib/src/media/: datatable.rs  mod.rs
runtimelib/src/messaging/: content.rs  execution.rs  mod.rs
runtimelib/tests/kernels/ir/: kernel.json
runtimelib/tests/kernels/rust/: kernel.json
web/: Cargo.toml
web/src/: instance.rs  main.rs  routes.rs  startup.rs
(+107 files in other folders)
