[workspace]

members = [
    "crates/nbformat",
    "crates/runtimelib",
    "crates/jupyter-serde",
    "crates/sidecar",
    "crates/jupyter-websocket-client",
    "crates/jupyter-protocol",
    "crates/ollama-kernel",
]

default-members = [
    "crates/nbformat",
    "crates/jupyter-serde",
    "crates/jupyter-protocol",
    "crates/jupyter-websocket-client",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.68"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
] }
futures = "0.3"
bytes = "1"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
