[workspace]

members = [
    "crates/nbformat",
    "crates/runtimelib",
    "crates/jupyter-serde",
    "crates/sidecar",
    "crates/jupyter-websocket-client",
    "crates/jupyter-protocol",
    "crates/ollama-kernel",
    "crates/mybinder",
    "crates/runt",
]

default-members = [
    "crates/nbformat",
    "crates/jupyter-serde",
    "crates/jupyter-protocol",
    "crates/jupyter-websocket-client",
    "crates/mybinder",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.68"
async-tungstenite = { version = ">= 0.29.1", features = [
    "tokio-runtime",
    "tokio-native-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
] }
futures = "0.3"
bytes = "1"
base64 = "0.22"
runtimelib = { path = "crates/runtimelib", version = "0.28.0", default-features = false }
jupyter-protocol = { path = "crates/jupyter-protocol", version = "0.8.1" }
thiserror = "2"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
