[workspace]

members = [
    "crates/nbformat",
    "crates/runtimelib",
    "crates/jupyter-serde",
    "crates/jupyter-websocket-client",
    "crates/jupyter-protocol",
    "crates/jupyter-ysync",
    "crates/ollama-kernel",
    "crates/mybinder",
]

default-members = [
    "crates/nbformat",
    "crates/jupyter-serde",
    "crates/jupyter-protocol",
    "crates/jupyter-websocket-client",
    "crates/jupyter-ysync",
    "crates/mybinder",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.68"
async-tungstenite = { version = ">= 0.29.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
] }
futures = "0.3"
bytes = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runtimelib = { path = "crates/runtimelib", version = "1.2.0", default-features = false }
jupyter-protocol = { path = "crates/jupyter-protocol", version = "1.2.0" }
thiserror = "2"
tokio = { version = "1.36.0", features = ["full"] }
yrs = "0.21"
dashmap = "6"
nbformat = { path = "crates/nbformat", version = "1.0.0" }
jupyter-websocket-client = { path = "crates/jupyter-websocket-client", version = "1.0.0" }

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
panic = "abort"
