[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
runtimelib = { path = "../runtimelib" }
tabled = "0.15.0"
anyhow = "1.0.80"

[[bin]]
path = "src/main.rs"
name = "runt"
