[package]
name = "jupyter-web"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.113"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.2"
async-tungstenite = { version = "0.22", features = ["tokio-runtime"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
