[package]
name = "runtimed"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtimed"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
axum = "0.7.4"
runtimelib = { path = "../runtimelib" }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
] }
ulid = "1.1.2"
anyhow = "1.0.80"
uuid = { version = "1.7.0", features = ["serde", "v5"] }
chrono = { version = "0.4.34", default-features = false, features = [
    "std",
    "serde",
] }
env_logger = "0.11.2"
log = "0.4.21"
notify = "6.1.1"
serde_json = "1.0.114"
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.30"
