[package]
name = "runtimelib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
anyhow = "1.0.79"
bytes = "1.5.0"
data-encoding = "2.5.0"
dirs = "5.0.1"
ring = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = "1.7.0"
zeromq = { version = "=0.3.4", default-features = false, features = [
    "tcp-transport",
    "tokio-runtime",
] }
tokio = { version = "1.36.0", features = ["full"] }
shellexpand = "3.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
hex = "0.4.3"
enum-as-inner = "0.6.0"
async-trait = "0.1.77"
