[package]
name = "runtimelib"
version = "0.4.2"
edition = "2021"
description = "Jupyter runtime library"
license = "BSD-3-Clause"
readme = "../README.md"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
data-encoding = "2.5.0"
dirs = "5.0.1"
rand = "0.8.5"
ring = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["serde", "v5"] }
zeromq = { version = "=0.3.4", default-features = false, features = [
    "tcp-transport",
    "tokio-runtime",
] }
tokio = { version = "1.36.0", features = ["full"] }
shellexpand = "3.1.0"
glob = "0.3.1"
base64 = "0.22.0"
