[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
axum = "0.7.4"
runtimelib = { path = "../runtimelib" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "uuid" ] }
ulid = "1.1.2"
anyhow = "1.0.80"
uuid = { version = "1.7.0", features = ["serde"] }
