[package]
name = "graphql-kernel"
version = "0.1.0"
edition = "2021"
description = "GraphQL Jupyter Kernel"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
runtimelib = { path = "../runtimelib", version = "0.24.0", features = [
    "tokio-runtime",
] }
jupyter-protocol = { path = "../jupyter-protocol", version = "0.5.0" }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.1", features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
