[package]
name = "jupyter-protocol"
version = "0.4.0"
edition = "2021"
description = "Jupyter messaging structures and traits for jupyter clients and servers"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = "0.8.5"
