[package]
name = "jupyter-protocol"
version = "0.9.0"
edition = "2021"
description = "Jupyter messaging structures and traits for jupyter clients and servers"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# WASM-specific dependencies - only add js features when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1"
default-features = false
features = ["serde", "v4", "v5", "js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
