[package]
name = "jupyter-serde"
version = "0.8.0"
edition = "2021"
description = "Serialization and Deserialization for Jupyter related data structures"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
jupyter-protocol = { path = "../jupyter-protocol", version = "0.5.0" }

[package.metadata]
deprecated = true
