[package]
name = "jupyter-websocket-client"
version = "0.4.1"
edition = "2021"
description = "Connect to Jupyter Servers over WebSockets"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
jupyter-serde = { path = "../jupyter-serde", version = "0.5.0" }
url = "2.5.2"
async-tungstenite = { version = "0.22", features = ["async-std-runtime"] }
jupyter-protocol = { path = "../jupyter-protocol", version = "0.2.0" }
