[package]
name = "jupyter-websocket-client"
version = "0.13.0"
edition = "2021"
description = "Connect to Jupyter Servers over WebSockets"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
url = "2.5.2"
async-tungstenite = { workspace = true }
tokio = { workspace = true }
jupyter-protocol = { workspace = true }
