[package]
name = "nbformat"
version = "0.12.0"
edition = "2021"
description = "Parse Jupyter Notebooks"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jupyter-protocol = { workspace = true }
thiserror = "1.0"
