[package]
name = "nbformat"
version = "0.13.0"
edition = "2021"
description = "Parse Jupyter Notebooks"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jupyter-protocol = { workspace = true }

thiserror = "1.0"

# WASM-specific dependencies - only add js features when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1"
default-features = false
features = ["serde", "v4", "v5", "js"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
