[package]
name = "ollama-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
runtimelib = { path = "../runtimelib", version = "0.19.0", features = [
    "tokio-runtime",
] }
jupyter-protocol = { path = "../jupyter-protocol", version = "0.1.0" }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
tokio = { version = "1.36.0", features = ["full"] }
