[package]
name = "runtimelib"
version = "0.19.0"
edition = "2021"
description = "Jupyter runtime library"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"
readme = "./README.md"

[dependencies]
zeromq = { version = "0.4", default-features = false, features = [
    "tcp-transport",
] }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
data-encoding = "2.5.0"
dirs = "5.0.1"
smol = { version = "1.2", optional = true }
futures = { workspace = true }
jupyter-serde = { version = "0.4.0", path = "../jupyter-serde" }
jupyter-protocol = { version = "0.1.0", path = "../jupyter-protocol" }
ring = "0.17.7"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
shellexpand = "3.1.0"
glob = "0.3.1"

[features]
async-dispatcher-runtime = [
    "zeromq/async-dispatcher-runtime",
    "async-dispatcher",
    "async-std",
    "smol",
]
tokio-runtime = ["tokio", "zeromq/tokio-runtime"]

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
optional = true

[dependencies.async-dispatcher]
version = "0.1"
optional = true

[dependencies.async-std]
version = "1"
features = ["attributes"]
optional = true
