[package]
name = "runtimelib"
version = "3.0.0"
edition = "2021"
description = "Deprecated: renamed to `jupyter-zmq-client`. This crate re-exports `jupyter-zmq-client` for backwards compatibility."
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"
readme = "./README.md"

[dependencies]
jupyter-zmq-client = { workspace = true, default-features = false }

[features]
default = ["ring"]
ring = ["jupyter-zmq-client/ring"]
aws-lc-rs = ["jupyter-zmq-client/aws-lc-rs"]
async-dispatcher-runtime = ["jupyter-zmq-client/async-dispatcher-runtime"]
tokio-runtime = ["jupyter-zmq-client/tokio-runtime"]
test-kernel = ["jupyter-zmq-client/test-kernel"]

[package.metadata.docs.rs]
features = ["async-dispatcher-runtime", "ring"]
no-default-features = true
