[package]
name = "sidecar"
version = "0.7.0"
edition = "2021"
description = "Sidecar jupyter outputs"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { workspace = true }
serde_json = { workspace = true }
jupyter-protocol = { workspace = true }
runtimelib = { workspace = true, features = [
    "async-dispatcher-runtime",
    "ring"
], default-features = false }
futures = { workspace = true }
querystring = "1.1.0"
tao = "0.31.0"
wry = "0.47.0"
smol = "2"
uuid = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "sidecar"
