[package]
name = "sidecar"
version = "1.0.0"
edition = "2021"
description = "Sidecar jupyter outputs"
repository = "https://github.com/runtimed/runtimed"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
mime_guess = "2.0"
rust-embed = { version = "8", features = ["compression"] }
serde = { workspace = true }
serde_json = { workspace = true }
jupyter-protocol = { workspace = true }
runtimelib = { workspace = true, features = [
    "tokio-runtime",
    "ring"
], default-features = false }
futures = { workspace = true }
querystring = "1.1.0"
tao = "0.31.0"
wry = "0.47.0"
tokio = { version = "1", features = ["full"] }
uuid = { workspace = true }

[lib]
name = "sidecar"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sidecar"
