[project]
name = "runtimed"
version = "0.1.0"
description = "Python toolkit for Jupyter runtimes, powered by runtimed Rust binaries"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Kyle Kelley", email = "rgbkrk@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
kernel = ["ipykernel>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runtimed"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.0",
]
