[project]
name = "runtimed"
version = "0.1.1"
description = "Python toolkit for Jupyter runtimes, powered by runtimed Rust binaries"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Kyle Kelley", email = "rgbkrk@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
kernel = ["ipykernel>=6.0"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../crates/runt/Cargo.toml"
python-source = "src"
bindings = "bin"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
    "ipykernel>=6.0",
]
